--- a/scss/style.scss
+++ b/scss/style.scss
@@ -539,7 +539,7 @@ header{
 					bottom: 0;
 					font-weight: 700!important;
 					font-size: 100px;
-					color: rgba(255,255,255,.08);
+					color:rgba(121, 239, 180, 0.25) ! important;;
 				}	
 				h1 {
 					font-size: 55px;
